<resources>
    <string name="app_name">ChitChat</string>
    <!-- Toolbar -->
    <string name="toolbar_description_back_button">Boton para ir hacia atras</string>
    <string name="toolbar_description_profile_button">Boton para acceder a perfil</string>
    <string name="toolbar_description_notification_button">Boton para acceder a notificaciones</string>

    <!-- Loading fragment -->
    <string name="loading_text">Cargando…</string>

    <!-- Contacts list fragment -->
    <string name="list_contacts_title_toolbar">Contactos</string>
    <string name="list_contacts_subtitle">Awesome to Chat With</string>
    <string name="list_contacts_profile_img">Foto de perfil</string>
    <string name="list_contacts_update_list">Actualizar la lista de contactos</string>
    <string name="list_contacts_btn_search">Boton para filtrar contactos</string>
    <string name="list_contacts_btn_quit_search">Boton para cancelar la busqueda de contactos</string>
    <string name="list_contacts_et_hint_search_user">Buscar contacto...</string>

    <!-- Chat list fragment -->
    <string name="chat_list_title_toolbar">ChitChat</string>
    <string name="chat_list_date_yesterday">Ayer</string>
    <string name="chat_list_subtitle">Conversaciones</string>
    <string name="chat_list_user_state">Estado del usuario</string>
    <string name="chat_list_add_chat">Añadir persona para hablar</string>
    <string name="chat_list_btn_search">Boton para filtrar conversaciones</string>
    <string name="chat_list_btn_quit_search">Boton para cancelar la busqueda de conversaciones</string>
    <string name="chat_list_et_hint_search_user">Buscar conversación...</string>
    <string name="chat_list_delete_chat">¿Eliminar chat?</string>
    <string name="chat_list_delete_chat_question">Al no ser el creador de la conversación no puedes borrarla de la base de datos, ¿quieres eliminarla de tus lista de conversaciones?</string>
    <string name="chat_list_warning_notification_chat">No puedes eliminar el chat si tienes notificaciones por leer</string>

    <!-- Error -->
    <string name="error">Error</string>
    <string name="error_session_expired">Su sesión ha expirado</string>
    <string name="error_unknown_error">Unknown Error</string>
    <string name="error_connection">Lo sentimos, estamos presentando problemas de conexión</string>
    <string name="error_connection_message">Vuelve a intentarlo más tarde.</string>


    <!-- Login -->
    <string name="textUser">Usuario</string>
    <string name="hintUser">Ingresa tu usuario</string>
    <string name="textPassword">Contraseña</string>
    <string name="hintPassword">Ingresa tu contraseña</string>
    <string name="textAccessBiometric">Acceso con biometría</string>
    <string name="textLogin">Login</string>
    <string name="imageLogoDescription">Logo ChitChat</string>
    <string name="textRegisterLoginF">Regístrate</string>
    <string name="textRegisterQuestionLoginF">¿No tienes cuenta?</string>

    <!-- Registration fragment -->
    <string name="user">Usuario</string>
    <string name="enter_user">Ingresa el usuario</string>
    <string name="password">Contraseña</string>
    <string name="enter_password">Ingresa la contraseña</string>
    <string name="repeat_password">Repetir Contraseña</string>
    <string name="repeat_pass">Repite la contraseña</string>
    <string name="nick">Nick</string>
    <string name="enter_nick">Ingresa el nick</string>
    <string name="selected_avatar">Avatar seleccionado:</string>
    <string name="avatar">avatar</string>
    <string name="register">Registrarse</string>
    <string name="registration_title">Registro</string>
    <string name="user_error">Usuario ya existe</string>
    <string name="user_not_exist_error">El usuario no existe</string>
    <string name="password_error">Contraseñas no coinciden</string>
    <string name="password_invalid">Contraseña inválida</string>
    <string name="required_field">Campo vacío</string>

    <!-- Profile fragment -->
    <string name="accept">Aceptar</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="editProfileDescription">icono de camara</string>
    <string name="photoProfileDescription">Photo de perfil en pantalla de Perfil</string>
    <string name="icon_action_description">icono de una accion o funcionalidad añadida</string>
    <string name="icon_arrow_right_description">Icono dirección derecha o hacia adelante</string>
    <string name="cancel">Cancelar</string>
    <string name="question_close_session">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="message_logout">Su sesión ha caducado debe de autenticar su cuenta de nuevo.</string>
    <string name="profile">Perfil</string>

    <!-- Error Messages -->
    <string name="error_401">Permisos no autorizados, vuelve iniciar sesión.</string>
    <string name="error_403">Error en la solicitud, vuelve a intentarlo más tarde.</string>
    <string name="error_500">Tenemos problemas internos, contacta con servicio técnico.</string>
    <string name="error_unknown">Algo inesperado ha ocurrido, vuelve a intentarlo.</string>

    <!-- Fragment splash-->
    <string name="splash_iv_logo">Logo de la aplicacion</string>

    <!-- Chat fragment-->
    <string name="send_message">Enviar mensaje</string>
    <string name="empty_list">Empty list</string>
    <string name="send_button">Botón enviar</string>
    <string name="online">En línea</string>

    <!--Dialog Biometric-->
    <string name="title_biometric_dialog">Acceso Biometrico</string>
    <string name="subtitle_biometric_dialog">Acceso biometrico accede a tus credenciales</string>
    <string name="cancel_biometric_dialog">Usar contraseña</string>
    <string name="not_registered_biometric_access">Para poder utilizar accesso con Biometria debes añadir una en ajustes del dispositivo.</string>
    <string name="biometric_unavailable">Acceso Biometrico no disponible.</string>

    <!-- Shared preferences-->
    <string name="profile_shared_preferences">app_prefs</string>
    <string name="profile_picture">profile_picture</string>
    <string name="title_biometric_activated">Accesso Biometrico</string>
    <string name="mesage_biometric_activated">¿Deseas activar acceso biométrico?</string>
    <string name="imageFingerprintDescription">Icono de huella dactilar para acceder con biometria.</string>
</resources>