<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="9dp">

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/subtitleFramework"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/chat_list_subtitle"
        app:layout_constraintEnd_toStartOf="@id/ibSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibSearch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/chat_list_btn_search"
        android:src="@drawable/icon_search"
        app:layout_constraintBottom_toBottomOf="@id/tvSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvSubtitle"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSearchUser"
        style="@style/subtitleFramework"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="name"
        android:background="@drawable/edittext_chat"
        android:hint="@string/chat_list_et_hint_search_user"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ibQuitSearch"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/ibQuitSearch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/chat_list_btn_quit_search"
        android:src="@drawable/baseline_arrow_back_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/etSearchUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChatList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_recyclerview_list_chats" />

    <ImageButton
        android:id="@+id/btnAddChat"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/circle_notification"
        android:contentDescription="@string/chat_list_add_chat"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_chat" />

</androidx.constraintlayout.widget.ConstraintLayout>