<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/imageVProfileFragment"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/photoProfileDescription"
        android:src="@mipmap/avatar_default" />

    <TextView
        android:id="@+id/textVUserNickNameProfileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Jimena"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toEndOf="@id/imageVProfileFragment"
        app:layout_constraintTop_toTopOf="@+id/imageVProfileFragment"/>
    <TextView
        android:id="@+id/textVUserNameProfileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Jimena_2003"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/textVUserNickNameProfileFragment"
        app:layout_constraintTop_toBottomOf="@+id/textVUserNickNameProfileFragment"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchBiometric"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/textAccessBiometric"
        style="@style/poppinsRegular16"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/imageVProfileFragment"
        app:layout_constraintStart_toStartOf="@id/actionILogoutProfileFragment"
        app:layout_constraintEnd_toEndOf="@id/actionILogoutProfileFragment"
        app:thumbTint="@color/switch_color"
        app:trackTint="@color/switch_color" />

    <com.team2.chitchat.ui.views.ActionItemViewGroup
        android:id="@+id/actionILogoutProfileFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:textAction="@string/close_session"
        app:icon="@drawable/logout_24"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchBiometric"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>